# oxford_spires_dataset

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.docker/: .env  Dockerfile  docker-compose.yml
.docker/loc/: Dockerfile  docker-compose.yml
.docker/oxspires/: .env  Dockerfile  docker-compose.yml
.docker/recon/: .env  Dockerfile  docker-compose.yml
.docker_loc/: Dockerfile  docker-compose.yml
.github/workflows/: python_tests.yml  ruff.yml
config/: loc_benchmark.yaml  recon_benchmark.yaml  sensor.yaml
configs/: dataset_download.yaml  sensor_rect.yaml
docs/: contributing.md
octomap_utils/: CMakeLists.txt  get_occ_free_from_bt.cpp  pcd2bt.cpp  traverse_bt.cpp
oxford_spires_utils/: __init__.py  bash_command.py  eval.py  io.py  point_cloud.py  se3.py  sensor.py  utils.py
oxford_spires_utils/cpp/: main.cpp
oxford_spires_utils/cpp/include/oxford_spires_utils/: get_occ_free_from_bt.h
oxford_spires_utils/cpp/src/: get_occ_free_from_bt.cpp
oxford_spires_utils/dataset/: dataset.py  sensor.py  utils.py
oxford_spires_utils/depth/: lidar_fisheye_projection.py  mesh_depth.py  overlay_from_rosbag.py  projection.py  utils.py  visualize_depthmap_pose.py
oxford_spires_utils/pose/: README.md  cmvs_output_parser.py  json_handler.py  json_handler_submap_utils.py  odom_noise.py  pose_convention.py  submapping.py  traj_config.py  traj_handler.py
oxford_spires_utils/pose/file_interfaces/: __init__.py  base.py  nerf.py  vilens_slam.py
oxford_spires_utils/trajectory/: align.py  json_handler.py  nerf_json.py  nerf_json_handler.py  pose_convention.py  utils.py
oxford_spires_utils/trajectory/file_interfaces/: nerf.py  timestamp.py  tum.py  vilens_slam.py
oxspires_tools/: bash_command.py  dataset.py  eval.py  point_cloud.py  se3.py  sensor.py  utils.py
oxspires_tools/cpp/: main.cpp
oxspires_tools/cpp/src/: filter_pcd_with_bt.cpp  get_occ_free_from_bt.cpp  pcd2bt.cpp  progress_bar.cpp
oxspires_tools/depth/: main.py  projection.py  surface_normal.py  utils.py
oxspires_tools/lidar_undistortion/: __init__.py  core.py  gtsam_opt.py  io.py
oxspires_tools/trajectory/: json_handler.py  json_handler_submap_utils.py  nerf_json_handler.py  pose_convention.py  utils.py
oxspires_tools/trajectory/file_interfaces/: base.py  nerf.py  timestamp.py  tum.py  vilens_slam.py
scripts/: check_dataset.py  colmap.py  cpp_example.py  dataset_download.py  estimate_rectified_intrinsics.py  estimate_velocity_bias.py  eval.py  eval_cloud.py  eval_undistort.py  generate_depth.py  merge_clouds.py  merge_downsample_vilens_slam_clouds.py  mvs.py  pcd_writer.py  recon_benchmark.py  rectify_image_from_distorted_image.py  rectify_images.py  transform_pcd_folder.py  undistort_sequence.py  undistort_sequence_v2.py  utils.py
scripts/dataset_manager/: dataset_downloader.py  dir_utils.py  gui.py
scripts/localisation_benchmark/: colmap.py  fast_lio2.py  fast_lio_slam.py  hba.py  immesh.py  lio_sam.py  main.py  sc_lio_sam.py  tf.json  tf2.json  vilens_hba.py
scripts/reconstruction_benchmark/: lidar_cloud_eval.py  main.py  mvs.py  nerf.py  nerf_json.py  nvs_benchmark.py  recon_benchmark.py  sfm.py  utils.py
spires_cpp/: CMakeLists.txt  example.py  pyproject.toml
spires_cpp/include/: filter_pcd_with_bt.h  pcd2bt.h
spires_cpp/include/spires_cpp/octomap/: filter_pcd_with_bt.h  pcd2bt.h  progress_bar.h
spires_cpp/src/spires_cpp/: __init__.py  main.cpp
spires_cpp/src/spires_cpp/include/: progress_bar.h
spires_cpp/src/spires_cpp/my_lib/: main.cpp
spires_cpp/src/spires_cpp/octomap/: filter_pcd_with_bt.cpp  get_occ_free_from_bt.cpp  pcd2bt.cpp  progress_bar.cpp
spires_ros/fast_lio2/: 2024-03-14_blenhein_1.launch  hesai.yaml
spires_ros/fast_lio2/launch_osd/: 2024-03-14_blenhein_1.launch
spires_ros/lio_sam/: frontier_hesai_19.yaml
spires_ros/lio_sam/config_lsam/: 2024-03-14_blenhein_1.yaml
spires_ros/lio_sam/launch_lsam/: 2024-03-14_blenhein_1.launch
tests/: test_depth.py  test_pose_convert.py  test_se3.py  test_timestamp.py
