[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"
[project]
name = "oxford_spires_utils"
version = "0.0.1"
description = "Utility functions for the Oxford Spires Dataset."
# license = { text="Apache 2.0"}
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


#[project.scripts]
#ndp = "nerf_data_pipeline.apps.pipeline:app"

[project.optional-dependencies]
style = [
    "mypy",
    "black",
    "isort",
    "docformatter"
]
test = ["pytest", "pytest-datadir"]
dev = ["oxford_spires_utils[test, style]", "ipdb"]

[tool.scikit-build]
sdist.exclude = ["oxford_spires_utils/cpp"]
sdist.include = []

[tool.setuptools.packages.find]
include = ["oxford_spires_utils*"]

[tool.ruff]
line-length = 120
respect-gitignore = false
target-version = "py38"
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "I",  # isort formatting.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
]
lint.ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["oxford_spires_utils"]
split-on-trailing-comma = false