[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "oxspires_tools"
version = "0.1.0"
description = "Utility functions for the Oxford Spires Dataset."
license = { text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy==1.24.4",
    "open3d>=0.13.0",
    "scipy>=1.10.1",
    "pytest>=8.0.0",
    "pypcd4>=1.1.0",
    "pye57>=0.4.13",
    # "nerfstudio==1.1.4",
    "evo>=1.29.0",
    "pytransform3d>=3.5.0",
    "huggingface_hub>=0.25.1",
    "ruff==0.11.4",
    "pre-commit==3.0.0",
    "opencv-python>=4.6.0.66",
]

[project.optional-dependencies]
style = [
    "mypy",
    "black",
    "isort",
    "docformatter"
]
test = ["pytest", "pytest-datadir"]
dev = ["oxspires_tools[test, style]", "ipdb"]

[tool.scikit-build]
sdist.exclude = ["oxspires_tools/cpp"]
sdist.include = []

[tool.setuptools.packages.find]
include = ["oxspires_tools*"]

[tool.ruff]
line-length = 120
respect-gitignore = false
target-version = "py38"
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "I",  # isort formatting.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
]
lint.ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["oxspires_tools"]
split-on-trailing-comma = false